--- a/src/assets/styles/addTask.scss
+++ b/src/assets/styles/addTask.scss
@@ -21,24 +21,36 @@
 .to-do-list-container {
     display: flex;
     flex-direction: column;
-    margin: 20px;
     gap: 16px;
 
         div {
             display: flex;
             justify-content: space-between;
-            width: 100%;
+            border: 2px solid #FF8303;
+            border-radius: 8px;
+            padding: 8px;
+            margin: 20px;
         }
 
         .text-task {
             display: flex;
             flex-direction: column;
             color: #FFFFFF;
+            border: none;
         }
 
-        .div-delete-button {
+        .delete-button {
             display: flex;
-            position: absolute;
+            justify-content: end;
+            border: none;
+
+            button {
+                width: 32px;
+                height: 32px;
+                background-color: #242320;
+                border: 1px solid #FF8303;
+                border-radius: 4px;
+            }
         }
 
 }
